--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>himanshu-pet-clinic</artifactId>
         <groupId>himanshu.springframework</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
