Profile property added in application.properties and profiles added for map services. closes #59

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #spring.banner.image.location
 # Internationalization
 spring.messages.basename=messages/messages
+#profile active
+spring.profiles.active=springdatajpa
